--- a/contato.html
+++ b/contato.html
@@ -60,6 +60,9 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d934.0738954842353!2d-47.39421309802911!3d-20.535083587273117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b0a7e26c1195f5%3A0xcb88b3969bd5994e!2sDinner's%20Burger!5e0!3m2!1sen!2sbr!4v1714929043785!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="info-burger-text" id="contatos">
+            <h1>LOCALIZAÇÃO</h1>
+            <p><span class="info-burger-text-title">Estamos localizados na</span> Av. Maj. Nicácio, 1930 - Centro, Franca - SP, 14400-850.</p>
+            <br>
             <h1>CONTATO</h1>
             <ul>
               <li>
@@ -101,6 +104,15 @@
               <li>
                 <span class="info-burger-text-title">Sexta e sábado:</span>
                 18:00 as 23:59
+              </li>
+              <h1>REDES SOCIAIS</h1>
+              <li>
+                <span class="info-burger-text-title">Facebook:</span>
+                <a href="https://www.facebook.com/dinersburgers" target="_blank">facebook.com/dinersburgers</a>
+              </li>
+              <li>
+                <span class="info-burger-text-title">Instagram:</span>
+                <a href="https://www.instagram.com/dinersburgers" target="_blank">instagram.com/dinersburgers</a>
               </li>
             </ul>
           </div>
