--- a/contato.html
+++ b/contato.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diiner's Burgers</title>
-    <link rel="icon" href="./images/logos/logo 4.jpg" type="img/jpg" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/contato.css" />
+    <link rel="icon" href="./images/logos/logo_diner.png" type="img/jpg" />
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/contato.css"/>
   </head>
   <body>
     <section class="menu-principal">
       <div class="menu container">
-        <img src="./images/logos/logo 4.jpg" alt="logo" />
+        <img src="./images/logos/logo_diner.png" alt="logo" />
 
         <nav>
           <ul class="menu-info">
@@ -96,15 +96,6 @@
                 <span class="info-burger-text-title">Tempo médio de entrega:</span>
                 50-70 min
               </li>
-              <h1>HORÁRIOS</h1>
-              <li>
-                <span class="info-burger-text-title">Segunda a quinta:</span>
-                18:00 as 23:00
-              </li>
-              <li>
-                <span class="info-burger-text-title">Sexta e sábado:</span>
-                18:00 as 23:59
-              </li>
               <h1>REDES SOCIAIS</h1>
               <li>
                 <span class="info-burger-text-title">Facebook:</span>
@@ -123,17 +114,9 @@
     <footer>
       <p>
         © Copyright by
-        <a
-          href="https://www.linkedin.com/in/leonardo-cunha-8a6170263/"
-          target="_blank"
-          >Leonardo Cunha </a
-        >
-        <a
-        href="https://www.linkedin.com/in/joao-luquetti/"
-        target="_blank"
-        >| João Vitor Luquetti</a>
+        <a href="https://github.com/leonardocunha1" target="_blank">Leonardo Cunha | </a> 
+        <a href="https://github.com/joaoluquetti" target="_blank">João Vitor Luquetti</a>
       </p>
-      
     </footer>
     
     <!-- <section class="banner">
